Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-130084

QML Compiler statistics fail once a single module uses "--only-bytecode"

    XMLWordPrintable

Details

    • 318ac4406 (dev), 012f827c2 (6.8)

    Description

      If you have a project with multiple QML modules you want to use the "all_aotstats" target to get statistics for QML compilation as documented here:

      https://doc.qt.io/Qt-6/qtqml-qml-script-compiler.html#obtaining-statistics-about-the-compilation-of-functions-and-bindings

      Once one of the modules in your application uses the "--only-bytecode" flag for qmlcachegen, the aostats can't be created anymore.

      Expected outcome:

      The all_aostats target should still work and list the compilation statistics for all files it actually compiled.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            olivier.decanniere Olivier De Cannière
            gagi Dominik Holland
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes